# scopetest

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
npm/: install.js
src/: lib.rs  main.rs  tests.rs
src/affected/: mod.rs
src/barrel/: analyzer.rs  mod.rs
src/builder/: mod.rs
src/cache/: mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/graph/: mod.rs
src/output/: mod.rs
src/parser/: import_extractor.rs  mod.rs
src/resolver/: mod.rs
